--- a/3.4/quality_changes/custom_extruder_1_%232_franks_ender_3_secret_mini_profile_%232.inst.cfg
+++ b/3.4/quality_changes/custom_extruder_1_%232_franks_ender_3_secret_mini_profile_%232.inst.cfg
@@ -4,9 +4,9 @@ name = franks_ender_3_secret_mini_profile #2
 definition = fdmprinter
 
 [metadata]
-type = quality_changes
 quality_type = normal
 setting_version = 4
+type = quality_changes
 position = 0
 
 [values]
@@ -15,9 +15,11 @@ brim_line_count = 10
 material_final_print_temperature = 200
 material_initial_print_temperature = 210
 material_print_temperature_layer_0 = 210
+retraction_amount = 4
 skirt_line_count = 2
 speed_print = 40
-support_angle = 70
+support_angle = 75
+support_use_towers = False
 top_layers = 9999999999
 wall_line_count = 3
 
