--- a/3.4/definition_changes/STECK+-+Creality+Ender+3_settings.inst.cfg
+++ b/3.4/definition_changes/STECK+-+Creality+Ender+3_settings.inst.cfg
@@ -19,23 +19,28 @@ machine_end_gcode = G91
 	M104 S0 ; turn off extruder
 	M140 S0 ; turn off bed
 	M84 ; disable motors
-	M117 printed @ 1mm.
-	
+	M117 Steck Ender 3
 machine_head_with_fans_polygon = [[-20, 10], [-20, -10], [10, 10], [10, -10]]
 machine_heated_bed = True
 machine_height = 240
 machine_start_gcode = Start G-Code
-	G28 ;Home
-	M104 S{material_print_temperature_layer_0} ; set extruder temp
-	M140 S{material_bed_temperature_layer_0} ; set bed temp
-	M190 S{material_bed_temperature_layer_0} ; wait for bed temp
-	M109 S{material_print_temperature_layer_0} ; wait for extruder temp
-	G1 Z15.0 F6000 ;Move the platform down 15mm
-	;Prime the extruder
-	G92 E0
-	G1 F210 E3
-	G92 E0
-	M117 Printing @ 1MM.
-	
+	G90 ; use absolute positioning for the XYZ axes
+	M82 ;absolute extrusion mode
+	M106 S0 ; Turn off cooling fan
+	;set temperatures
+	M140 S60 ; set bed temp
+	M190 S60 ; wait for bed temp
+	M104 S210 T0 ; set extruder temp
+	M109 S210 T0 ; wait for extruder temp
+	G28 ; home all axes
+	G92 E0.0
+	;do intro line
+	G1 Z5;
+	G1 X10 Y10 Z0 F6000;
+	G1 X60.0 E9.0  F1000.0 ; intro line
+	G1 X100.0 E12.5  F1000.0 ; intro line
+	;set extrusion zero
+	G92 E0.0
+	M117 Steck Ender 3
 machine_width = 230
 
