--- a/3.4/extruders/custom_extruder_1+%232.extruder.cfg
+++ b/3.4/extruders/custom_extruder_1+%232.extruder.cfg
@@ -4,17 +4,17 @@ name = Extruder 1
 id = custom_extruder_1 #2
 
 [metadata]
-setting_version = 4
 type = extruder_train
 enabled = True
 machine = STECK - Creality Ender 3
+setting_version = 4
 position = 0
 
 [containers]
 0 = custom_extruder_1 #2_user
-1 = custom_extruder_1_#2_franks_ender_3_secret_mini_profile_#2
+1 = custom_fdmextruder_#4_franks_ender_3_secret_profile
 2 = normal
-3 = custom_material
+3 = generic_pla_175
 4 = empty_variant
 5 = custom_extruder_1 #2_settings
 6 = custom_extruder_1
