--- a/3.4/extruders/custom_extruder_3+%232.extruder.cfg
+++ b/3.4/extruders/custom_extruder_3+%232.extruder.cfg
@@ -4,15 +4,15 @@ name = Extruder 3
 id = custom_extruder_3 #2
 
 [metadata]
-setting_version = 4
 type = extruder_train
 enabled = True
 machine = STECK - Creality Ender 3
+setting_version = 4
 position = 2
 
 [containers]
 0 = custom_extruder_3 #2_user
-1 = custom_extruder_3_#2_franks_ender_3_secret_mini_profile_#2
+1 = custom_extruder_3_fdmextruder_#4_franks_ender_3_secret_profile
 2 = normal
 3 = generic_pla
 4 = empty_variant
