--- a/3.4/machine_instances/STECK+-+Creality+Ender+3.global.cfg
+++ b/3.4/machine_instances/STECK+-+Creality+Ender+3.global.cfg
@@ -4,12 +4,13 @@ name = STECK - Creality Ender 3
 id = STECK - Creality Ender 3
 
 [metadata]
-setting_version = 4
 type = machine
+post_processing_scripts = 
+setting_version = 4
 
 [containers]
 0 = STECK - Creality Ender 3_user
-1 = custom_franks_ender_3_secret_mini_profile_#2
+1 = steck_-_creality_ender_3_empty #2
 2 = normal
 3 = empty_material
 4 = empty_variant
