--- a/3.4/extruders/custom_extruder_7+%232.extruder.cfg
+++ b/3.4/extruders/custom_extruder_7+%232.extruder.cfg
@@ -4,15 +4,15 @@ name = Extruder 7
 id = custom_extruder_7 #2
 
 [metadata]
-type = extruder_train
-enabled = True
-machine = STECK - Creality Ender 3
 setting_version = 4
+machine = STECK - Creality Ender 3
+enabled = True
+type = extruder_train
 position = 6
 
 [containers]
 0 = custom_extruder_7 #2_user
-1 = custom_extruder_7_fdmextruder_#4_franks_ender_3_secret_profile
+1 = custom_extruder_7_#2_franks_ender_3_secret_fast_scorpion_raft
 2 = normal
 3 = generic_pla
 4 = empty_variant
