--- a/3.4/machine_instances/STECK+-+Creality+Ender+3.global.cfg
+++ b/3.4/machine_instances/STECK+-+Creality+Ender+3.global.cfg
@@ -4,13 +4,16 @@ name = STECK - Creality Ender 3
 id = STECK - Creality Ender 3
 
 [metadata]
+setting_version = 4
+octoprint_api_key = 8CD5FD040F0F45C68B1AC11E00034383
+octoprint_auto_print = false
 type = machine
 post_processing_scripts = 
-setting_version = 4
+octoprint_id = Ender3Octoprint
 
 [containers]
 0 = STECK - Creality Ender 3_user
-1 = steck_-_creality_ender_3_empty #2
+1 = custom_franks_ender_3_secret_fast_scorpion_raft
 2 = normal
 3 = empty_material
 4 = empty_variant
