--- a/3.4/extruders/custom_extruder_1+%232.extruder.cfg
+++ b/3.4/extruders/custom_extruder_1+%232.extruder.cfg
@@ -4,15 +4,15 @@ name = Extruder 1
 id = custom_extruder_1 #2
 
 [metadata]
-type = extruder_train
-enabled = True
-machine = STECK - Creality Ender 3
 setting_version = 4
+machine = STECK - Creality Ender 3
+enabled = True
+type = extruder_train
 position = 0
 
 [containers]
 0 = custom_extruder_1 #2_user
-1 = custom_fdmextruder_#4_franks_ender_3_secret_profile
+1 = custom_extruder_1_#2_franks_ender_3_secret_fast_scorpion_raft
 2 = normal
 3 = generic_pla_175
 4 = empty_variant
