--- a/3.4/quality_changes/custom_fdmextruder_%234_franks_ender_3_secret_profile.inst.cfg
+++ b/3.4/quality_changes/custom_fdmextruder_%234_franks_ender_3_secret_profile.inst.cfg
@@ -4,16 +4,19 @@ name = franks_ender_3_secret_profile
 definition = fdmprinter
 
 [metadata]
-type = quality_changes
 setting_version = 4
-position = 0
 quality_type = normal
+type = quality_changes
+position = 0
 
 [values]
-brim_line_count = 10
+brim_line_count = 15
 material_final_print_temperature = 200
-material_initial_print_temperature = 0
+material_initial_print_temperature = 210
 material_print_temperature = 200
 material_print_temperature_layer_0 = 210
 skirt_line_count = 2
+speed_layer_0 = 15
+speed_travel_layer_0 = 20
+support_angle = 75
 
