Preparing to go up to Cura 6.0

--- a/3.5/quality_changes/custom_extruder_1_%232_minimal-tall-supports.inst.cfg
+++ b/3.5/quality_changes/custom_extruder_1_%232_minimal-tall-supports.inst.cfg
@@ -1,19 +1,20 @@
 [general]
 version = 4
-name = Steck-E3-Base-Profile
+name = Minimal-Tall-Supports
 definition = fdmprinter
 
 [metadata]
-quality_type = normal
-type = quality_changes
 position = 0
 setting_version = 5
+type = quality_changes
+quality_type = normal
 
 [values]
-brim_line_count = 0
+brim_line_count = 35
 cool_min_layer_time = 10
-infill_pattern = trihexagon
-infill_sparse_density = 10
+infill_line_distance = 4
+infill_pattern = cubic
+infill_sparse_density = 15
 material_final_print_temperature = 200
 material_initial_print_temperature = 210
 material_print_temperature = 200
@@ -23,10 +24,13 @@ retraction_hop = 0.2
 retraction_hop_enabled = True
 retraction_speed = 40
 skirt_line_count = 2
-speed_layer_0 = 30
-speed_print = 80
+speed_layer_0 = 20
+speed_print = 50
+speed_travel = 80
 speed_travel_layer_0 = 20
-support_angle = 75
+support_angle = 70
+support_bottom_stair_step_width = 7
+support_pattern = concentric
 wall_line_count = =1 if magic_spiralize else max(1, round((wall_thickness - wall_line_width_0) / wall_line_width_x) + 1) if wall_thickness != 0 else 0
 wall_thickness = 1.2
 
