--- a/3.5/quality_changes/custom_extruder_8_%232_minimal-tall-supports.inst.cfg
+++ b/3.5/quality_changes/custom_extruder_8_%232_minimal-tall-supports.inst.cfg
@@ -1,14 +1,13 @@
 [general]
 version = 4
-name = Steck-E3-Base-Profile
+name = Minimal-Tall-Supports
 definition = fdmprinter
 
 [metadata]
-type = quality_changes
+position = 7
 setting_version = 5
+type = quality_changes
 quality_type = normal
 
 [values]
-adhesion_type = skirt
-layer_height = 0.2
 
