--- a/3.5/quality_changes/custom_steck-e3-base-profile_spiralize.inst.cfg
+++ b/3.5/quality_changes/custom_steck-e3-base-profile_spiralize.inst.cfg
@@ -1,6 +1,6 @@
 [general]
 version = 4
-name = Steck-E3-Miniature-Profile
+name = Steck-E3-Base-Profile_Spiralize
 definition = fdmprinter
 
 [metadata]
@@ -10,8 +10,7 @@ quality_type = normal
 
 [values]
 adhesion_type = brim
-layer_height = 0.08
-layer_height_0 = 0.2
-support_enable = True
-support_type = everywhere
+layer_height = 0.15
+magic_spiralize = True
+material_bed_temperature_layer_0 = 65
 
