--- a/3.5/user/custom_extruder_1+%232_user.inst.cfg
+++ b/3.5/user/custom_extruder_1+%232_user.inst.cfg
@@ -4,14 +4,15 @@ name = custom_extruder_1 #2_user
 definition = custom
 
 [metadata]
-type = user
 extruder = custom_extruder_1 #2
+type = user
 setting_version = 5
 
 [values]
-infill_sparse_density = 30
-raft_margin = 4
+brim_line_count = 15
+infill_sparse_density = 20
+skirt_brim_speed = 10
 speed_print = 60
-speed_wall_x = 50
+speed_print_layer_0 = 10
 support_angle = 80
 
