--- a/3.5/quality_changes/custom_extruder_4_%232_steck-e3-base-profile_spiralize.inst.cfg
+++ b/3.5/quality_changes/custom_extruder_4_%232_steck-e3-base-profile_spiralize.inst.cfg
@@ -1,14 +1,13 @@
 [general]
 version = 4
-name = Steck-E3-Base-Profile
+name = Steck-E3-Base-Profile_Spiralize
 definition = fdmprinter
 
 [metadata]
 type = quality_changes
+position = 3
 setting_version = 5
 quality_type = normal
 
 [values]
-adhesion_type = skirt
-layer_height = 0.2
 
