--- a/3.5/quality_changes/custom_minimal-tall-supports.inst.cfg
+++ b/3.5/quality_changes/custom_minimal-tall-supports.inst.cfg
@@ -1,17 +1,17 @@
 [general]
 version = 4
-name = Steck-E3-Miniature-Profile
+name = Minimal-Tall-Supports
 definition = fdmprinter
 
 [metadata]
-type = quality_changes
 setting_version = 5
+type = quality_changes
 quality_type = normal
 
 [values]
 adhesion_type = brim
-layer_height = 0.08
-layer_height_0 = 0.2
+layer_height = 0.15
+retraction_combing = noskin
 support_enable = True
-support_type = everywhere
+support_type = buildplate
 
