--- a/3.5/user/STECK+-+Creality+Ender+3_user.inst.cfg
+++ b/3.5/user/STECK+-+Creality+Ender+3_user.inst.cfg
@@ -4,12 +4,13 @@ name = STECK - Creality Ender 3_user
 definition = custom
 
 [metadata]
+setting_version = 5
 type = user
 machine = STECK - Creality Ender 3
-setting_version = 5
 
 [values]
-adhesion_type = raft
+adhesion_type = brim
+layer_height = 0.15
 support_enable = True
 support_type = everywhere
 
